feat: create GroupSocialType

--- a/lib/l10n/nego_pt.arb
+++ b/lib/l10n/nego_pt.arb
@@ -34,7 +34,7 @@
 
   "orDividerText": "Ou",
 
-  "inputEmailOrPhoneLabelText": "Email ou Telephone",
+  "inputEmailOrPhoneLabelText": "Email ou Telefone",
   "inputEmailOrPhoneHintText": "Digita o email ou contato",
 
   "inputPasswordLabelText": "Senha",
